--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "user management",
     "autoload": {
         "psr-4": {
-            "Package\\Usermanagement\\": "src/"
+            "US\\Package\\Usermanagement\\": "src/"
         }
     },
     "require": {}
