--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,24 @@
 {
-    "name": "usisahnfilsa/usermanagement",
-    "description": "user management",
-    "autoload": {
-        "psr-4": {
-            "US\\Package\\Usermanagement\\": "src/"
+    "name": "usmanagement/pack",
+    "type": "library",
+    "description": "Logging for PHP 8.0",
+    "keywords": ["log","logging"],
+    "homepage": "https://github.com/hidayatmukti/User-Management",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "mukti",
+            "email": "hidayatmukti@student.ub.ac.id",
+            "homepage": "https://github.com/hidayatmukti/User-Management",
+            "role": "Developer"
         }
+    ],
+    "require": {
+        "php": ">=8.0.0"
     },
-    "require": {}
+    "autoload": {
+        "psr-0": {
+            "Monolog": "src"
+        }
+    }
 }
